Project

General

Profile

Actions

Fix #6079

closed

libceph: osd_client does not handle PAUSERD or PAUSEWR or FULL flags in osdmap

Added by Josh Durgin over 10 years ago. Updated over 10 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When these flags are present, reads and or writes should not be sent. When these flags are removed, requests that were pasued need to be resent. Make sure not to introduce a bug like #6070.

Actions #1

Updated by Ian Colle over 10 years ago

  • Assignee set to Josh Durgin
Actions #2

Updated by Sage Weil over 10 years ago

  • Priority changed from Normal to High
Actions #3

Updated by Sage Weil over 10 years ago

  • Tracker changed from Bug to Fix
Actions #4

Updated by Josh Durgin over 10 years ago

This is worse than I thought - for the FULL flag, the OSD will return -ENOSPC, which will get translated into -EIO by the kernel's block layer. FSes on top of rbd at this point do not behave well with I/O errors.

Actions #5

Updated by Ian Colle over 10 years ago

  • Target version set to v0.73
Actions #6

Updated by Ian Colle over 10 years ago

  • Priority changed from High to Urgent
Actions #7

Updated by Ian Colle over 10 years ago

  • Target version changed from v0.73 to v0.74
Actions #8

Updated by Neil Levine over 10 years ago

  • Status changed from New to 12
Actions #9

Updated by Sage Weil over 10 years ago

  • Status changed from 12 to In Progress
Actions #10

Updated by Sage Weil over 10 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF